force-app/main/default/objects/cgcloud__Tour_Tour_Check__c/cgcloud__Tour_Tour_Check__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between tour and tour check.</description>
    <label>Tour Tour Check</label>
    <nameField>
        <displayFormat>TTC-{0000}</displayFormat>
        <label>Tour Tour Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Tour Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>