force-app/main/default/objects/cgcloud__Tour_Tour_Check__c/fields/cgcloud__Answer__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answer</label>
    <type>Checkbox</type>
</CustomField>