force-app/main/default/objects/cgcloud__Tour_Tour_Check__c/fields/cgcloud__Check_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_Type__c</fullName>
    <label>Check Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SecurityCheck</fullName>
            </value>
            <value>
                <fullName>VehicleCheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>