force-app/main/default/objects/cgcloud__Tour_Tour_Check__c/fields/cgcloud__Tour__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour__c</fullName>
    <label>Tour</label>
    <referenceTo>cgcloud__Tour__c</referenceTo>
    <relationshipLabel>Tour Checks</relationshipLabel>
    <relationshipName>Tour_Tour_Checks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>