force-app/main/default/objects/cgcloud__Tour_Tour_Check__c/fields/cgcloud__Tour_Check__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour_Check__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tour Check</label>
    <referenceTo>cgcloud__Tour_Check__c</referenceTo>
    <relationshipLabel>Tour Tour Checks</relationshipLabel>
    <relationshipName>Tour_Tour_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>