force-app/main/default/objects/cgcloud__Tour_Tour_Check__c/fields/cgcloud__Tour_Check_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour_Check_Description__c</fullName>
    <formula>cgcloud__Tour_Check__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tour Check Description</label>
    <type>Text</type>
</CustomField>