force-app/main/default/objects/cgcloud__Tour_Tour_Check__c/validationRules/cgcloud__Sales_Org_should_be_same_for_both.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_both</fullName>
    <active>true</active>
    <description>The Tour and the Tour Check must have the same Sales Org.</description>
    <errorConditionFormula>AND( cgcloud__Tour_Check__r.Id &lt;&gt; null ,
cgcloud__Tour__r.Id &lt;&gt; null ,
TEXT( cgcloud__Tour__r.cgcloud__Sales_Org__c ) &lt;&gt; TEXT( cgcloud__Tour_Check__r.cgcloud__Sales_Org__c ))</errorConditionFormula>
    <errorMessage>The Sales Org should be same for both Tour and Tour Check</errorMessage>
</ValidationRule>